--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     def fragment_version = "1.5.4"
+    def room_version = "2.4.3"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -45,4 +46,8 @@ dependencies {
 
     // Fragment
     implementation "androidx.fragment:fragment:$fragment_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
