Add Firestore Database Instance

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,11 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation "com.google.firebase:firebase-analytics"
-    implementation 'com.google.firebase:firebase-auth'
+    implementation "com.google.firebase:firebase-auth"
 
     // Google Sign In
-    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation "com.google.android.gms:play-services-auth:20.4.0"
+
+    // Firestore
+    implementation "com.google.firebase:firebase-firestore"
 }
