--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/eduRIDMTheme"
         tools:targetApi="31">
+
+        <receiver
+            android:name=".AppBroadcastReceiver"
+            android:enabled="true"
+            android:exported="false" >
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
